<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Login"
    android:paddingBottom="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="100dp"
    android:screenOrientation="portrait"
    >

    <LinearLayout
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logoImage"
            android:src="@mipmap/ic_mobi_svg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloMsg1"
            android:textSize="35sp"
            android:fontFamily="@font/font"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloMsg2"
            android:textSize="35sp"
            android:fontFamily="@font/font"/>
        <TextView
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font"
            android:textSize="15sp"
            android:id="@+id/slogan_name"
            android:text="@string/subMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/userIdFiled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputIdFiled"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userID"
                    android:scrollHorizontally="false"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPwdFiled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userPwdFiled"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/userPW"
                    android:imeOptions="actionDone"
                    android:scrollHorizontally="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/font_bold"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/findPwd"/>
                <TextView
                    android:padding="5dp"
                    android:fontFamily="@font/font_bold"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"/>
                <TextView
                    android:id="@+id/joinBtn"
                    android:fontFamily="@font/font_bold"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/join"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:fontFamily="@font/font_bold"
            android:id="@+id/loginSubmit"
            android:onClick="loginEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next"
            />

    </LinearLayout>
</LinearLayout>